modify discussion rercord

--- a/discussion/讨论记录.md
+++ b/discussion/讨论记录.md
@@ -1,4 +1,6 @@
-# Aftermath (?)
+# Aftermath
+
+题目双关
 
 ###	核心玩法
 
@@ -8,14 +10,23 @@
 
 ###	背景&剧情
 
-- 
+- 遇难到荒岛、收集装备
+- 当地人是会魔法的萨满、弹幕
+- 通关之后获得魔法书，回溯时间，可以和平通关
 
 ###	元素
 
 - 基本动作
+  - 站立
+  - 跳跃
+  - 跑步
   - 无敌帧(?)
 - 武器&技能
+  - 待定
 - NPC
+  - 站立
+  - 跑步
+  - ~~攻击~~
 - 场景交互
   - 陷阱
   - checkpoints
@@ -23,14 +34,21 @@
 ###	视觉
 
 - 背景
+  - 岛上
+  - ~~洞窟~~
 - 主角 & NPC
   - 动作
   - 攻击
   - 死亡
-  - 特殊动作( level clear)
+  - 特殊动作( level clear、捡道具、存档?)
 - 武器
+  - 再议
 - 弹幕
+  - 带设计
 - 关卡元素
+  - 平台
+  - 陷阱(地刺)
+  - 存档点
 
 ###	音频
 
@@ -39,9 +57,12 @@
 - Hurt
 - level clear
 - motion
+- attack
 
 
 ### 成就系统（TBD）
 
 ### 操控 （TBC）
+
+- 
 
