--- a/discussion/讨论记录.md
+++ b/discussion/讨论记录.md
@@ -4,9 +4,9 @@
 
 ###	核心玩法
 
-- 横板过关
+- 横板过关 冒险岛
 - 射击
-- 弹幕
+- 弹幕 rabi rabi
 
 ###	背景&剧情
 
@@ -19,7 +19,7 @@
 - 基本动作
   - 站立
   - 跳跃
-  - 跑步
+  - 跑步·
   - 无敌帧(?)
 - 武器&技能
   - 待定
