updae barrage type

--- a/discussion/讨论记录.md
+++ b/discussion/讨论记录.md
@@ -42,9 +42,22 @@
   - 死亡
   - 特殊动作( level clear、捡道具、存档?)
 - 武器
+
   - 再议
 - 弹幕
-  - 带设计
+  - 种类
+    1.	 直线
+    2.	 两边放射型
+    3.	 天女散花(？)–-预判
+    4.	 旋转射出
+    5.	 直线交叉
+    6.	 自顶向下左右
+    7.	 在边缘回弹
+    8.	 停顿再追踪
+    9.	 多点放射
+    10.	 分组 带角度
+    11.	 四条线带旋转
+    12.	 子母弹
 - 关卡元素
   - 平台
   - 陷阱(地刺)
